Align the tags in the browse by model correctly

--- a/static/css/wab.css
+++ b/static/css/wab.css
@@ -166,7 +166,6 @@ h2 {
 .browse-section {
     font-size: 20pt;
     font-weight: bold;
-    margin-top: 2rem;
 }
 
 .browse-model-link {
